--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.417.0",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
